# ouroboros

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
src/: main.rs  response.rs  structs.rs
src/docker/: mod.rs  structs.rs
src/routes/: docker.rs  misc.rs  mod.rs
