[package]
name = "ouroboros"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bollard = "0.8.0"
bytes = "0.5"
hyper = "0.14.5"
hyperlocal = "0.7"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "fa77435187aaedda73b0caad0ab5bfdb24a8b476" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "fa77435187aaedda73b0caad0ab5bfdb24a8b476" }
serde = "1.0.117"
serde_json = "1.0.59"
thiserror = "1.0.22"
